--- a/app/src/main/res/layout/fragment_pre_order.xml
+++ b/app/src/main/res/layout/fragment_pre_order.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/size_4_dp">
 
+
     <com.mlsdev.animatedrv.AnimatedRecyclerView
         android:id="@+id/recycler_pre_order_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/colorWhite"
         app:animationDuration="600"
         app:gridLayoutManagerColumns="1"
         app:layoutManagerOrientation="vertical"
@@ -20,7 +21,42 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/image_not_found"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/colorWhite"
+        android:src="@drawable/img_no_data"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/linear_bottoms"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_no_row"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/iran_sans_bold"
+        android:text="@string/text_no_item_add"
+        android:textColor="@color/color_red"
+        android:textSize="@dimen/text_size_12_sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_insert_row"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/iran_sans_bold"
+        android:text="@string/text_add_row_by_click"
+        android:textColor="@color/color_green"
+        android:textSize="@dimen/text_size_12_sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_no_row"/>
 
     <LinearLayout
         android:id="@+id/linear_bottoms"
