--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -45,6 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/box_for_edits"
+                    android:inputType="text"
                     android:padding="@dimen/dimen_dp_small"
                     android:textSize="@dimen/dimen_sp_medium"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -64,6 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/iran_sans_light"
+                    android:inputType="text"
                     android:padding="@dimen/dimen_dp_tiny"
                     android:text="@string/text_company_name"
                     android:textSize="@dimen/dimen_sp_small"
@@ -74,6 +76,7 @@
                     android:id="@+id/et_company"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:inputType="text"
                     android:background="@drawable/box_for_edits"
                     android:padding="@dimen/dimen_dp_small"
                     android:textSize="@dimen/dimen_sp_medium"
