--- a/app/src/main/res/layout/activity_activation.xml
+++ b/app/src/main/res/layout/activity_activation.xml
@@ -67,6 +67,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/box_for_edits"
             android:gravity="center"
+            android:inputType="number"
             android:maxLength="6"
             android:padding="@dimen/dimen_dp_small"
             android:textSize="@dimen/dimen_sp_medium"
@@ -74,7 +75,6 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_company_caption" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/const_seconds"
         android:layout_width="wrap_content"
@@ -96,8 +96,6 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -113,9 +111,9 @@
             android:padding="@dimen/dimen_dp_tiny"
             android:text="دریافت مجدد کد فعال سازی"
             android:textSize="@dimen/dimen_sp_small"
-
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+
             app:layout_constraintTop_toTopOf="parent" />
 
 
