--- a/app/src/main/res/layout/dialog_detail_order.xml
+++ b/app/src/main/res/layout/dialog_detail_order.xml
@@ -458,7 +458,7 @@
             android:id="@+id/tv_correct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/dimen_dp_small"
+            android:layout_marginEnd="@dimen/dimen_dp_tiny"
             android:background="@drawable/text_green_border_style"
             android:fontFamily="@font/iran_sans_medium"
             android:paddingLeft="@dimen/dimen_dp_large"
@@ -467,6 +467,24 @@
             android:paddingBottom="@dimen/dimen_dp_tiny"
             android:text="@string/text_order_correct"
             android:textColor="@color/color_green"
+            android:textSize="@dimen/dimen_sp_small"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/tv_cancel"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/dimen_dp_tiny"
+            android:background="@drawable/text_green_border_style"
+            android:fontFamily="@font/iran_sans_medium"
+            android:paddingLeft="@dimen/dimen_dp_large"
+            android:paddingTop="@dimen/dimen_dp_tiny"
+            android:paddingRight="@dimen/dimen_dp_large"
+            android:paddingBottom="@dimen/dimen_dp_tiny"
+            android:text="انصراف"
+            android:textColor="@color/color_red"
             android:textSize="@dimen/dimen_sp_small"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
