--- a/app/src/main/res/layout/dialog_social.xml
+++ b/app/src/main/res/layout/dialog_social.xml
@@ -74,7 +74,7 @@
                 android:layout_gravity = "center"
                 android:layout_margin = "@dimen/dimen_dp_tiny"
                 android:layout_weight = "1"
-
+android:visibility="gone"
                 android:gravity = "center"
                 android:orientation = "vertical">
 
@@ -103,7 +103,7 @@
                 android:layout_height = "wrap_content"
                 android:layout_gravity = "center"
                 android:layout_weight = "1"
-
+android:visibility="gone"
                 android:gravity = "center"
                 android:orientation = "vertical">
 
